# z-io

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  ChangeLog.md  LICENSE  README.md  Z-IO.cabal  Z-IO.cabal.bak  test-symlink2
.github/workflows/: ci.yml  dockerCI.yml  osxCI.yml  ubuntuCI.yml  winCI.yml
Z/: IO.hs
Z/Compression/: Zlib.hs  Zlib.hsc
Z/IO/: BIO.hs  Buffered.hs  Environment.hs  Exception.hs  FileSystem.hs  GetOpts.hs  Logger.hs  LowResTimer.hs  Network.hs  Node.hs  Pipe.hs  Process.hsc  Resource.hs  StdStream.hs  Stream.hs  Test.hs  Time.hs
Z/IO/BIO/: Base.hs  Base64.hs  Concurrent.hs  Zlib.hsc
Z/IO/FileSystem/: Base.hs  BaseThreaded.hs  FilePath.hs  FilePath.hsc  FilePathPosix.hs  FilePathWin.hs  Threaded.hs  Watch.hs  _Shared.hs
Z/IO/Network/: DNS.hsc  IPC.hs  SocketAddr.hsc  TCP.hs  UDP.hs
Z/IO/StdStream/: Ansi.hs  ReadLine.hs
Z/IO/UV/: Errno.hsc  FFI.hsc  FFI_Env.hsc  Manager.hs  UVStream.hs  Win.hs
bench/: GetTime.hs  Http.hs
cbits/: hs_cwalk.c  hs_uv_base.c  hs_uv_dns.c  hs_uv_file.c  hs_uv_fs_event.c  hs_uv_process.c  hs_uv_stream.c  hs_uv_udp.c  hs_zlib.c
examples/: examples.cabal  http-bench.hs  wordcount.hs
include/: fs_shared.hs  hs_cwalk.h  hs_uv.h  hs_zlib.h
test/Z/Compression/: ZlibSpec.hs
test/Z/IO/: BIOSpec.hs  FileSystemSpec.hs  LowResTimerSpec.hs  LowResTimerSpec.hs.bak  ProcessSpec.hs  ResourceSpec.hs  UDPSpec.hs  UDPSpec.hs.bak
test/Z/IO/BIO/: BaseSpec.hs  ConcurrentSpec.hs  ZlibSpec.hs
test/Z/IO/FileSystem/: ThreadedSpec.hs
test/Z/IO/Network/: IPCSpec.hs  IPCSpec.hs.bak  TCPSpec.hs  UDPSpec.hs
