cabal-version:      2.4
name:               examples
version:            0.1.0.0

maintainer:         winter

executable wc
    main-is:          wordcount.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , Z-IO 
                    , Z-Data
    hs-source-dirs:   ./
    default-language: Haskell2010

executable http-bench
    main-is:          http-bench.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , Z-IO 
                    , Z-Data
    hs-source-dirs:   ./
    default-language: Haskell2010
    ghc-options:  -O2 -threaded -rtsopts -eventlog -with-rtsopts=-N
